added brackets for python auto complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "python.autoComplete.extraPaths": [
         "/opt/ros/foxy/lib/python3.8/site-packages/"
     ],
+    "python.autoComplete.addBrackets": true,
     "python.pythonPath": "/usr/bin/python3",
     // Use the system installed version of autopep8
     "python.formatting.autopep8Path": "/usr/bin/autopep8",
