--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,22 @@
-FROM ros:foxy
+FROM ubuntu:20.04
 
-ARG ROS_DISTRO= foxy
+# ROS parameter
+ENV ROS_DISTRO=foxy
+ENV AMENT_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
+ENV COLCON_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
+ENV LD_LIBRARY_PATH=/opt/ros/${ROS_DISTRO}/lib
+ENV PATH=/opt/ros/${ROS_DISTRO}/bin:$PATH
+ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.8/site-packages
+ENV ROS_PYTHON_VERSION=3
+ENV ROS_VERSION=2
+ENV DEBIAN_FRONTEND=noninteractive
+
+# User credentials for non-root user
 ARG USERNAME=user
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
+# set timezone
 ENV TZ=Europe/Zurich
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
@@ -22,8 +34,39 @@ RUN apt-get update \
     rsync \
     tar \
     python \
-    ros-foxy-gazebo-ros-pkgs
-  
+    python3-pip \
+    uncrustify
+
+# install ROS
+RUN apt-get install -y locales \
+  && locale-gen en_US.UTF-8 \
+  && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+
+ENV LANG en_US.UTF-8
+
+RUN apt-get install -y curl \ 
+    gnupg2 \ 
+    lsb-release
+
+RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key  -o /usr/share/keyrings/ros-archive-keyring.gpg
+
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
+
+RUN apt-get update \
+    && apt-get install -y ros-$ROS_DISTRO-desktop \ 
+    pylint3 \
+    python3-argcomplete \
+    python3-colcon-common-extensions \
+    python3-pip \
+    python3-rosdep \
+    python3-vcstool \
+    ros-${ROS_DISTRO}-ament-lint \
+    ros-${ROS_DISTRO}-launch-testing \
+    ros-${ROS_DISTRO}-launch-testing-ament-cmake \
+    ros-${ROS_DISTRO}-launch-testing-ros \
+    python3-autopep8 \ 
+    ros-${ROS_DISTRO}-gazebo*
+
 # Create the user and source the ros distro
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
