added rust, minor changes to structure

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -24,19 +24,20 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update \
   && apt-get upgrade -y \
   && apt-get install -y ssh \
-    sudo \
-    build-essential \
-    git \
-    gcc \
-    g++ \
-    gdb \
-    clang \
-    cmake \
-    rsync \
-    tar \
-    python \
-    python3-pip \
-    uncrustify
+  sudo \
+  build-essential \
+  curl \
+  git \
+  gcc \
+  g++ \
+  gdb \
+  clang \
+  cmake \
+  rsync \
+  tar \
+  python \
+  python3-pip \
+  uncrustify
 
 # install ROS
 RUN apt-get install -y locales \
@@ -46,31 +47,37 @@ RUN apt-get install -y locales \
 ENV LANG en_US.UTF-8
 
 RUN apt-get install -y curl \ 
-    gnupg2 \ 
-    lsb-release
+  gnupg2 \ 
+  lsb-release
 
 RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key  -o /usr/share/keyrings/ros-archive-keyring.gpg
 
 RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
 
 RUN apt-get update \
-    && apt-get install -y ros-$ROS_DISTRO-desktop \ 
-    pylint3 \
-    python3-argcomplete \
-    python3-colcon-common-extensions \
-    python3-pip \
-    python3-rosdep \
-    python3-vcstool \
-    ros-${ROS_DISTRO}-ament-lint \
-    ros-${ROS_DISTRO}-launch-testing \
-    ros-${ROS_DISTRO}-launch-testing-ament-cmake \
-    ros-${ROS_DISTRO}-launch-testing-ros \
-    python3-autopep8 \ 
-    ros-${ROS_DISTRO}-gazebo*
+  && apt-get install -y ros-$ROS_DISTRO-desktop \ 
+  pylint3 \
+  python3-argcomplete \
+  python3-colcon-common-extensions \
+  python3-pip \
+  python3-rosdep \
+  python3-vcstool \
+  ros-${ROS_DISTRO}-ament-lint \
+  ros-${ROS_DISTRO}-launch-testing \
+  ros-${ROS_DISTRO}-launch-testing-ament-cmake \
+  ros-${ROS_DISTRO}-launch-testing-ros \
+  python3-autopep8 \ 
+  ros-${ROS_DISTRO}-gazebo*
 
 # Create the user and source the ros distro
 RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
-    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME \
-    && echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /home/$USERNAME/.bashrc
+  && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
+  && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+  && chmod 0440 /etc/sudoers.d/$USERNAME \
+  && echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /home/$USERNAME/.bashrc
+
+USER user
+# install rust
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
+ENV PATH="/home/${USERNAME}/.cargo/bin:${PATH}"
