--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,24 +5,22 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 		// Update 'VARIANT' to pick an Ubuntu version: focal, bionic
-		"args": { "VARIANT": "focal" }
+		"args": {
+			"VARIANT": "focal"
+		}
 	},
-
 	"runArgs": [
-		"--cap-add=SYS_PTRACE", 
-		"--security-opt", 
+		"--cap-add=SYS_PTRACE",
+		"--security-opt",
 		"seccomp=unconfined",
 		"--net=host",
 	],
-
 	"mounts": [
-        "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached"
-      ],
-
+		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached"
+	],
 	"remoteEnv": {
 		"DISPLAY": "${localEnv:DISPLAY}",
-	  },
-
+	},
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"terminal.integrated.profiles.linux": {
@@ -32,8 +30,6 @@
 		},
 		"terminal.integrated.defaultProfile.linux": "bash"
 	},
-
-
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"ms-vscode.cpptools",
@@ -42,14 +38,16 @@
 		"twxs.cmake",
 		"smilerobotics.urdf",
 		"zachflower.uncrustify",
+		"2gua.rainbow-brackets",
+		"zerotaskx.rust-extension-pack",
+		"zxh404.vscode-proto3"
 	],
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	//"postCreateCommand": "",
-
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "user"
+	"remoteUser": "user",
+	"workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/user/workspace,type=bind,consistency=delegated",
+	"workspaceFolder": "/home/user/workspace"
 }
