updatet ros version to galactic

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,9 @@
-FROM ubuntu:20.04
+FROM ros:galactic-ros-base
 
 # ROS parameter
-ENV ROS_DISTRO=foxy
-ENV AMENT_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
-ENV COLCON_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
-ENV LD_LIBRARY_PATH=/opt/ros/${ROS_DISTRO}/lib
+ENV ROS_DISTRO=galactic
 ENV PATH=/opt/ros/${ROS_DISTRO}/bin:$PATH
 ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.8/site-packages
-ENV ROS_PYTHON_VERSION=3
-ENV ROS_VERSION=2
 ENV DEBIAN_FRONTEND=noninteractive
 
 # User credentials for non-root user
@@ -37,25 +32,8 @@ RUN apt-get update \
   tar \
   python \
   python3-pip \
-  uncrustify
-
-# install ROS
-RUN apt-get install -y locales \
-  && locale-gen en_US.UTF-8 \
-  && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
-
-ENV LANG en_US.UTF-8
-
-RUN apt-get install -y curl \ 
-  gnupg2 \ 
-  lsb-release
-
-RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key  -o /usr/share/keyrings/ros-archive-keyring.gpg
-
-RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
-
-RUN apt-get update \
-  && apt-get install -y ros-$ROS_DISTRO-desktop \ 
+  uncrustify \
+  ros-$ROS_DISTRO-desktop \ 
   pylint3 \
   python3-argcomplete \
   python3-colcon-common-extensions \
@@ -68,6 +46,7 @@ RUN apt-get update \
   ros-${ROS_DISTRO}-launch-testing-ros \
   python3-autopep8 \ 
   ros-${ROS_DISTRO}-gazebo*
+
 
 # Create the user and source the ros distro
 RUN groupadd --gid $USER_GID $USERNAME \
