--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,9 @@
-FROM ros:galactic-ros-base
+FROM nvidia/opengl:1.2-glvnd-devel-ubuntu20.04
 
-# ROS parameter
-ENV ROS_DISTRO=galactic
-ENV PATH=/opt/ros/${ROS_DISTRO}/bin:$PATH
-ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.8/site-packages
+ENV TZ=Europe/Zurich
+ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES},display
+ENV QT_X11_NO_MITSHM=1
+
 ENV DEBIAN_FRONTEND=noninteractive
 
 # User credentials for non-root user
@@ -11,51 +11,64 @@ ARG USERNAME=user
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-# set timezone
-ENV TZ=Europe/Zurich
+# Install language
+RUN apt-get update && apt-get install -y \
+    locales \
+    && locale-gen en_US.UTF-8 \
+    && update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 \
+    && rm -rf /var/lib/apt/lists/*
+ENV LANG en_US.UTF-8
 
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+# Install timezone
+RUN ln -fs /usr/share/zoneinfo/UTC /etc/localtime \
+    && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get update \
+    && apt-get install -y tzdata \
+    && dpkg-reconfigure --frontend noninteractive tzdata \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update \
-  && apt-get upgrade -y \
-  && apt-get install -y ssh \
-  sudo \
-  build-essential \
-  curl \
-  git \
-  gcc \
-  g++ \
-  gdb \
-  clang \
-  cmake \
-  rsync \
-  tar \
-  python \
-  python3-pip \
-  uncrustify \
-  ros-$ROS_DISTRO-desktop \ 
-  pylint3 \
-  python3-argcomplete \
-  python3-colcon-common-extensions \
-  python3-pip \
-  python3-rosdep \
-  python3-vcstool \
-  ros-${ROS_DISTRO}-ament-lint \
-  ros-${ROS_DISTRO}-launch-testing \
-  ros-${ROS_DISTRO}-launch-testing-ament-cmake \
-  ros-${ROS_DISTRO}-launch-testing-ros \
-  python3-autopep8 \ 
-  ros-${ROS_DISTRO}-gazebo*
+# Install ROS2
+RUN apt-get update && apt-get install -y \
+    curl \
+    gnupg2 \
+    lsb-release \
+    git \
+    sudo \
+    && curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null \
+    && apt-get update && apt-get install -y \
+    ros-galactic-desktop \
+    ros-galactic-gazebo* \
+    ros-galactic-turtlebot3-msgs \
+    ros-galactic-turtlebot3 \
+    python3-argcomplete \
+    mesa-utils \
+    libglvnd0 \
+    libgl1 \
+    libglx0 \
+    libegl1 \
+    libxext6 \
+    libx11-6 \
+    && rm -rf /var/lib/apt/lists/*
 
+ENV ROS_DISTRO=galactic
+ENV AMENT_PREFIX_PATH=/opt/ros/galactic
+ENV COLCON_PREFIX_PATH=/opt/ros/galactic
+ENV LD_LIBRARY_PATH=/opt/ros/galactic/lib
+ENV PATH=/opt/ros/galactic/bin:$PATH
+ENV PYTHONPATH=/opt/ros/galactic/lib/python3.8/site-packages
+ENV ROS_PYTHON_VERSION=3
+ENV ROS_VERSION=2
+ENV DEBIAN_FRONTEND=
 
 # Create the user and source the ros distro
 RUN groupadd --gid $USER_GID $USERNAME \
-  && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
-  && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-  && chmod 0440 /etc/sudoers.d/$USERNAME \
-  && echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /home/$USERNAME/.bashrc
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
+    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+    && chmod 0440 /etc/sudoers.d/$USERNAME \
+    && echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> /home/$USERNAME/.bashrc
 
-USER user
+USER $USERNAME
 # install rust
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
