--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,26 +2,8 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.187.0/containers/ubuntu
 {
 	"name": "dev-container",
-	"build": {
-		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick an Ubuntu version: focal, bionic
-		"args": {
-			"VARIANT": "focal"
-		}
-	},
-	"runArgs": [
-		"--cap-add=SYS_PTRACE",
-		"--security-opt",
-		"seccomp=unconfined",
-		"--net=host",
-	],
-	"mounts": [
-		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached"
-	],
-	"remoteEnv": {
-		"DISPLAY": "${localEnv:DISPLAY}",
-	},
-	// Set *default* container specific settings.json values on container create.
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "app",
 	"settings": {
 		"terminal.integrated.profiles.linux": {
 			"bash": {
@@ -48,6 +30,6 @@
 	//"postCreateCommand": "",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "user",
-	"workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/user/workspace,type=bind,consistency=delegated",
-	"workspaceFolder": "/home/user/workspace"
+	//"workspaceFolder": "/home/user"
+	"workspaceFolder": "/workspace"
 }
