added test explorer ui to extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,7 @@
 		"zachflower.uncrustify",
 		"2gua.rainbow-brackets",
 		"zerotaskx.rust-extension-pack",
+		"hbenl.vscode-test-explorer",
 		"zxh404.vscode-proto3"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -30,6 +31,5 @@
 	//"postCreateCommand": "",
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "user",
-	//"workspaceFolder": "/home/user"
 	"workspaceFolder": "/workspace"
 }
