--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "servo-controller"]
 	path = servo-controller
 	url = git@github.com:zarathir/servo-controller.git
+[submodule "teleop-grpc-rs"]
+	path = teleop-grpc-rs
+	url = git@github.com:zarathir/teleop-grpc-rs.git
