branch without nvidia dependency

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,8 @@
-FROM nvidia/opengl:1.2-glvnd-devel-ubuntu20.04
+FROM ubuntu:20.04
 
 ENV TZ=Europe/Zurich
-ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES},display
-ENV QT_X11_NO_MITSHM=1
+#ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES},display
+
 
 ENV DEBIAN_FRONTEND=noninteractive
 
