--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ..:/workspace:cached
     network_mode: host
-    runtime: nvidia
+    #runtime: nvidia
     privileged: true
     # Uncomment the next four lines if you will use a ptrace-based debugger like C++, Go, and Rust.
     cap_add:
@@ -19,4 +19,3 @@ services:
     security_opt:
       - seccomp:unconfined
     entrypoint: /entrypoint.sh
-    #command: /bin/sh -c "while sleep 1000; do :; done"
